<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="media_library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="title_activity_media_library">MediaLibraryActivity</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="share_internal_message">Курс andorid-разработчик на Яндекс.Практикум: https://practicum.yandex.ru/android-developer/</string>
    <string name="email_to_support_recipient">w-im-ff@yandex.ru</string>
    <string name="email_to_support_theme">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="email_to_support_body">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="terms_of_use">https://yandex.ru/legal/practicum_offer/</string>
    <string name="input_hint">https://yandex.ru/legal/practicum_offer/</string>

</resources>
