<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/main"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="ExtraText">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:padding="@dimen/_12dp"
            android:text="@string/app_name"
            android:textAppearance="@font/ys_display_medium"
            android:textColor="@color/white"
            android:textFontWeight="500"
            android:textSize="@dimen/primary_text_size" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginTop="@dimen/_24dp"
        android:layout_marginEnd="@dimen/_16dp"
        android:layout_marginBottom="@dimen/_28dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/search"
            style="@style/main_button"
            android:text="@string/search"
            app:icon="@drawable/search" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/media_library"
            style="@style/main_button"
            android:text="@string/media_library"
            app:icon="@drawable/media_library" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/settings"
            style="@style/main_button"
            android:text="@string/settings"
            app:icon="@drawable/settings" />

    </LinearLayout>

</LinearLayout>
